--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "framer-motion": "^11.11.9",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
