--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "framer-motion": "^11.11.9",
     "fs": "^0.0.1-security",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
