--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "cloudinary": "^2.5.1",
     "dotenv": "^16.4.5",
     "electron-squirrel-startup": "^1.0.1",
@@ -55,6 +56,7 @@
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
